test/distributions/corrado/factoryMethods/incompatibleArraySize.1-2.good
incompatibleArraySize.chpl:12: error: halt reached - Domain size mismatch in 'cyclicDist.createArray' dimension 0
